[tool.poetry]
name = "cmpsc487w-test1"
version = "0.1.0"
description = ""
authors = ["donoh248 <153301671+donoh248@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
